kubernetes/apps/system-upgrade/tuppr/networkpolicys/np-allow-egress-to-k8s-api.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-egress-to-k8s-api
  namespace: system-upgrade
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: tuppr
  policyTypes:
    - Egress
  egress:
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: kube-system
          podSelector:
            matchLabels:
              app.kubernetes.io/name: kube-apiserver
      ports:
        - protocol: TCP
          port: 6443
