kubernetes/apps/system-upgrade/tuppr/networkpolicys/np-allow-egress-to-talos-api.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-egress-to-talos-api
  namespace: system-upgrade
spec:
  podSelector: {}
  policyTypes:
    - Egress
  egress:
    - from:
      - namespaceSelector:
          matchLabels:
            kubernetes.io/metadata.name: system-upgrade
      - podSelector:
          matchLabels:
            app.kubernetes.io/name: tuppr
    - to:
        - ipBlock:
            cidr: 192.168.50.0/24
      ports:
        - protocol: TCP
          port: 5000
