kubernetes/apps/system-upgrade/tuppr/networkpolicys/system-upgrade-allow-eg-to-coredns.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: system-upgrade-allow-eg-to-coredns
  namespace: system-upgrade
spec:
  podSelector: {}
  policyTypes:
    - Egress
  egress:
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: kube-system
          podSelector:
            matchLabels:
              kubernetes.io/name: CoreDNS
      ports:
        - protocol: UDP
          port: 53
        - protocol: TCP
          port: 53
