kubernetes/apps/system-upgrade/tuppr/networkpolicys/system-upgrade-default-deny-all.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: system-upgrade-default-deny-all
  namespace: system-upgrade
spec:
  podSelector: {}
  policyTypes:
    - Ingress
    - Egress
  ingress: []
  egress: []
