kubernetes/apps/system-upgrade/tuppr/networkpolicys/system-upgrade-tuppr-allow-ig-from-k8s-api.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: system-upgrade-tuppr-allow-ig-from-k8s-api
  namespace: system-upgrade
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: tuppr
  ingress:
    - fromEntities:
        - kube-apiserver
      toPorts:
        - ports:
            - port: "9443"
              protocol: TCP
